--- a/FHIR-Beginner-Quiz/FHIR-Beginner-Quiz.csproj
+++ b/FHIR-Beginner-Quiz/FHIR-Beginner-Quiz.csproj
@@ -167,6 +167,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Question.aspx.cs">
       <DependentUpon>Question.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Question.aspx.designer.cs">
       <DependentUpon>Question.aspx</DependentUpon>
