--- a/FHIR-Beginner-Quiz/FHIR-Beginner-Quiz.csproj
+++ b/FHIR-Beginner-Quiz/FHIR-Beginner-Quiz.csproj
@@ -122,8 +122,10 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="questions.json" />
+    <Content Include="answers.json" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Question.aspx" />
+    <Content Include="Score.aspx" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
@@ -171,6 +173,13 @@
     </Compile>
     <Compile Include="Question.aspx.designer.cs">
       <DependentUpon>Question.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Score.aspx.cs">
+      <DependentUpon>Score.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Score.aspx.designer.cs">
+      <DependentUpon>Score.aspx</DependentUpon>
     </Compile>
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
